# platypus-client

./: .gitignore  Cargo.toml  README.md  index.html
client/: Cargo.toml  Trunk.toml  index.html  style.css
client/src/: main.rs
client/src/model/common/: form.rs  list.rs  routes.rs
client/src/model/tmf620/: catalog.rs  category.rs  mod.rs  product_offering.rs  product_offering_price.rs  product_specification.rs
client/src/model/tmf629/: mod.rs
client/src/model/tmf632/: individual.rs  mod.rs  organization.rs
client/src/model/tmf633/: mod.rs  service_candidate.rs  service_catalog.rs  service_category.rs
client/src/model/tmf645/: mod.rs
client/src/model/tmf648/: mod.rs
client/src/model/tmf674/: mod.rs
client/src/model/tmf7xx/: mod.rs
src/: main.rs
src/model/: common.rs  mod.rs
src/model/common/: form.rs  list.rs  menu.rs  mod.rs  routes.rs  table.rs
src/model/tmf620/: catalog.rs  category.rs  mod.rs  product_offering.rs  product_offering_price.rs  product_specification.rs
src/model/tmf629/: mod.rs
src/model/tmf632/: individual.rs  mod.rs  organization.rs
src/model/tmf633/: mod.rs  service_candidate.rs  service_catalog.rs  service_category.rs  service_specification.rs
src/model/tmf645/: mod.rs
src/model/tmf648/: mod.rs
src/model/tmf674/: mod.rs
src/model/tmf7xx/: mod.rs
tmf-leptos/: Cargo.toml
tmf-leptos/src/: lib.rs
tmf-leptos/src/common/: has_validity.rs  last_update.rs  mod.rs  money.rs  price.rs  related_party.rs  time_period.rs
tmf-leptos/src/engaged_party/: account_ref.rs  mod.rs  related_party_ref.rs
tmf-leptos/src/traits/: has_description.rs  has_id.rs  has_lastupdate.rs  has_name.rs  has_validity.rs  mod.rs
