[package]
name = "platypus-client"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
tmf620 = []
tmf629 = []
tmf632 = []
tmf633 = ["tmflib/tmf633"]
tmf648 = []
tmf674_v4 = []
tmf674_v5 = []
tmf632_v4 = []
tmf632_v5 = []
core = ["tmf620","tmf629","tmf633","tmf632_v4","tmf648","tmf674_v4"]
core_v5 = ["tmf620","tmf629","tmf632_v5","tmf648","tmf674_v5"]
default = ["core"]
experimental = ["tmf7xx"]
tmf7xx = ["experimental"]
composable = ["experimental"]

[dependencies]
leptos = { version = "0.7.0", features = ["csr","hydrate"] }
# tmflib = { git = "https://github.com/rruckley/tmflib.git"}
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1.7"
leptos_meta = "0.7.0"
leptos_router = "0.7.0"
reqwest-wasm = "0.11.16"
serde = "1.0.215"
serde_json = "1.0.133"
tmflib = "0.1.23"

[dev-dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-test = "0.3.47"
pretty_assertions = "1.4.1"

[dev-dependencies.web-sys]
features = [
    "Event",
    "EventInit",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "XPathResult",
]
version = "0.3.74"
