[package]
name = "platypus-client"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
tmf620 = ["tmflib/tmf620"]
tmf629 = ["tmflib/tmf629"]
tmf632 = ["tmflib/tmf632"]
tmf633 = ["tmflib/tmf633"]
tmf645 = ["tmflib/tmf645"]
tmf648 = ["tmflib/tmf648"]
tmf674 = ["tmflib/tmf674"]
core = ["tmf620","tmf629","tmf633","tmf632","tmf645","tmf648","tmf674"]
V4 = ["tmflib/build-V4"]
V5 = ["tmflib/build-V5"]
default = ["core","V4"]
experimental = ["tmf7xx"]
tmf7xx = ["experimental"]
composable = ["experimental"]

[dependencies]
leptos = { version = "0.7.6", features = ["csr"] }
# tmflib = { git = "https://github.com/rruckley/tmflib.git"}
log = "0.4.27"
console_log = "1"
console_error_panic_hook = "0.1.7"
leptos_meta = "0.7.8"
leptos_router = "0.7.8"
reqwest-wasm = {version = "0.11.16", features = ["blocking"]}
serde = "1.0.219"
serde_json = "1.0.140"
tmflib = "0.1.28"
uuid = { version = "1.16.0", features = ["v4","js"] }
# tmf-client = "0.1.6"

[dev-dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-test = "0.3.49"
pretty_assertions = "1.4.0"

[dev-dependencies.web-sys]
features = [
    "Event",
    "EventInit",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "XPathResult",
]
version = "0.3.74"
