[package]
name = "tmf-leptos"
version = "0.1.1"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]
description = "Library to render TMF schema as forms"
repository = "https://github.com/rruckley/platypus-client/tmf-leptos"
license = "Apache-2.0"

[features]
v4 = ["tmflib/build-V4"]
v5 = ["tmflib/build-V5"]

default = ["v4"]

[dependencies]
leptos = "0.8.6"
tmflib = "0.1.32"
